7090
Since {{ArrayTags}} have landed:

{code}
scala> Array()
<console>:8: error: macro has not been expanded
              Array()
                   ^

scala> :type if (false) Array("qwe") else Array()
<console>:8: error: macro has not been expanded
       if (false) Array("qwe") else Array()
                                         ^
<console>:8: error: macro has not been expanded
              if (false) Array("qwe") else Array()
{code}

The error message isn't stellar, but it beats a runtime error.
